PHP if/else satser, formulär, stringupper och low.

--- a/kapitel-2/uppgift-2-3.html
+++ b/kapitel-2/uppgift-2-3.html
@@ -3,30 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Favorit</title>
+    <title>Ändra backgrund</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
-    <link rel="stylesheet" href="uppgift-1-3.css">
+    <link rel="stylesheet" href="uppgift-1-1.css">
 </head>
 <body>
-        <form action="./skript.php" method="POST">
-            <h2>Favorit bok och film!</h2><br>
-
-            <label for="">Bok</label>
-            <select name="bok" id="">
-                <option value="Aik">Harry Potter</option>
-                <option value="Hammarby">Hungergames</option>
-                <option value="Djurgården">Fifty Shades of grey</option>
+        <form action="./uppgift-2-3.php" method="POST">
+            <h2>Ändra backgrundsfärgen</h2><br>
+            <label>Färger:</label>
+            <select name="bgfärg">
+                <option value="Red">Röd</option>
+                <option value="Blue">Blå</option>
+                <option value="Green">Grön</option>
+                <option value="Yellow">Gul</option>
             </select>
-
-            <label for="">Film</label>
-            <select name="film" id="">
-                <option value="Aik">Lejonkungen</option>
-                <option value="Hammarby">James Bond</option>
-                <option value="Djurgården">Pulpfiction</option>
-            </select><br>
-
-            <button>Skicka</button>
+            <button>Välj!</button>
         </form>
-    
 </body>
 </html>
