--- a/Gymnasiearbete/startsida.html
+++ b/Gymnasiearbete/startsida.html
@@ -18,9 +18,9 @@
                             <div class='line'></div>
                         </div>
                         <div class='menu'>
-                            <div class='menu-item'><a href="">Home</a></div>
-                            <div class='menu-item'><a href="">About us</a></div>
-                            <div class='menu-item'><a href="">Contact</a></div>
+                            <div class='menu-item'><a href="startsida.html">Home</a></div>
+                            <div class='menu-item'><a href="omoss.html">About us</a></div>
+                            <div class='menu-item'><a href="kontakt.html">Contact</a></div>
                         </div>
                     <h1 class="loga">upsleeve</h1>
                     <div class="korgdiv">
@@ -30,7 +30,8 @@
                     </div>                   
             </header>
             <main>
-                <img class="bakgrund" src="/Gymnasiearbete/bilder/loukas-konstantinidis-k1cNsoxYquQ-unsplash.jpg" alt="">
+               
+
             </main>
 
         
