--- a/Gymnasiearbete/omoss.html
+++ b/Gymnasiearbete/omoss.html
@@ -18,9 +18,9 @@
                             <div class='line'></div>
                         </div>
                         <div class='menu'>
-                            <div class='menu-item'><a href="startsida.html">Home</a></div>
-                            <div class='menu-item'><a href="omoss.html">About us</a></div>
-                            <div class='menu-item'><a href="kontakt.html">Contact</a></div>
+                            <div class='menu-item'><a href="startsida.html">Startsida</a></div>
+                            <div class='menu-item'><a href="omoss.html">Vilka är vi?</a></div>
+                            <div class='menu-item'><a href="kontakt.html">Kontakt</a></div>
                         </div>
                     <h1 class="loga">upsleeve</h1>
                     <div class="korgdiv">
@@ -30,6 +30,19 @@
                     </div>                   
             </header>
             <main>
+                <div class="info">
+                    <h2>Vilka är vi?</h2>
+                    <p>Upsleeve UF är ett nytt genombrott inom kläder och mode. <br> Vi är ett team på 3 elever som strävar efter att skapa en unik <br> och attraktiv produkt med kundernas behov i fokus.</p>
+
+                    <h2>Hur kontakter med er?</h2>
+                    <p>Man kan antingen skriva till oss på hemsidan genom att trycka på "kontakta oss" i menyn. <br> Annars fungerar det också att skriva till oss på instagram. <br>Instagram: upsleeve_uf</p>
+
+                    <h2>Hur går betalningen till?</h2>
+                    <p>All betalning sker via swish. <br>Tel - 0768804444</p>
+
+                    <h2>Ångerrätt?</h2>
+                    <p>Efter att du betalat för din produkt så har du 30-dagars ångersrätt.</p>
+                </div>
 
             </main>
 
