--- a/Gymnasiearbete/startsida.html
+++ b/Gymnasiearbete/startsida.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="meny.css">
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </head>
-<body>
+<body class="bodymedbild">
     <div class="kontainer">
             <header>
                     <div class='hamburger'>
@@ -18,9 +18,9 @@
                             <div class='line'></div>
                         </div>
                         <div class='menu'>
-                            <div class='menu-item'><a href="startsida.html">Home</a></div>
-                            <div class='menu-item'><a href="omoss.html">About us</a></div>
-                            <div class='menu-item'><a href="kontakt.html">Contact</a></div>
+                            <div class='menu-item'><a href="startsida.html">Startsida</a></div>
+                            <div class='menu-item'><a href="omoss.html">Vilka är vi?</a></div>
+                            <div class='menu-item'><a href="kontakt.html">Kontakt</a></div>
                         </div>
                     <h1 class="loga">upsleeve</h1>
                     <div class="korgdiv">
@@ -30,6 +30,14 @@
                     </div>                   
             </header>
             <main>
+                <div class="start">
+                    <img class="rek" src="./bilder/upsleeve-kampanj.jpg" alt="">
+                    <div class="omhoodies">
+                    <h2>Hoodies</h2>
+                    <p>Våra hoodies kommer i tre olika olia färger: <br>
+                    Svart, Vitt och Beige. Finns i storlekarna small, medium och large och är unisex. <br> Pris: 349 kr </p>
+                </div>
+                </div>
                
 
             </main>
